--- a/figures/kblpp-example/caption.tex
+++ b/figures/kblpp-example/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:kblpp-example} Control flow graph with Ball-Larus instrumentation modified to emit acyclic path IDs to an output stream and running example of our approach that shows a 4-iteration path forest (4-IPF) for a possible small execution trace.
+\label{fig:kblpp-example} Control flow graph (CFG) with Ball-Larus instrumentation modified to emit acyclic path IDs to an output stream and running example of our approach that shows a 4-iteration path forest (4-IPF) for a possible small execution trace. Loop back edges in the CFG have been restored after the path numbering phase.
